fix branch name on GitHub Actions filter

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - master
-      - '/releases/*'
-      - '/pull-req/*'
+      - 'releases/*'
+      - 'pull-req/*'
 
 jobs:
   test:
