--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "engines": {
     "node": "~18"
   },
+  "type": "module",
   "name": "oauth-token-retriever",
   "description": "A simple command for downloading OAuth Tokens",
   "version": "0.2.0",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "@toss/ky": "^1.2.1",
     "eslint": "<9",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
@@ -15,6 +15,7 @@
     "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-promise": "^7.2.1",
     "intelli-espower-loader": "^1.1.0",
+    "ky": "^1.7.4",
     "lodash": "^4.17.21",
     "mocha": "^11.0.1",
     "pkg": "^5.8.1",
@@ -24,7 +25,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "oauth": "^0.10.0",
-    "open": "<9",
+    "open": "^10.1.0",
     "yargs": "^17.7.2"
   },
   "scripts": {
