ci: replace Node.js to Deno

--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -1,62 +1,32 @@
 name: pkg
 
 on:
+  workflow_dispatch:
   push:
     tags:
       - v*.*.*
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
-        node-version: [18.x]
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+    - name: install Deno
+      uses: denoland/setup-deno@v2
       with:
-        node-version: ${{ matrix.node-version }}
-    - name: setup yarn
-      run: npm install -g yarn
-    - name: install npms w/ yarn
-      run: yarn install
-    - name: set pkg platform
-      id: pkg-platform
-      uses: ./.github/actions/pkg-platform
-      with:
-        os: ${{ matrix.os }}
+        deno-version: 2.x
+    - name: install dependencies
+      run: deno install
     - name: echo steps
       env:
         STEPS: ${{ toJSON(steps) }}
       run: echo "$STEPS"
     - name: package executable
-      env:
-        PKG_PLATFORM: ${{ steps.pkg-platform.outputs.name }}
-      run: |
-        yarn run pkg -t "node18-$PKG_PLATFORM" -o "pkg/oauth-token-retriever-$PKG_PLATFORM" src/index.js
-      if: matrix.os != 'windows-latest'
-    - name: package executable
-      env:
-        PKG_PLATFORM: ${{ steps.pkg-platform.outputs.name }}
-      run: |
-        yarn run pkg -t "node12-%PKG_PLATFORM%" -o "pkg/oauth-token-retriever-%PKG_PLATFORM%" src/index.js
-      if: matrix.os == 'windows-latest'
-    - name: upload artifacts
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PKG_PLATFORM: ${{ steps.pkg-platform.outputs.name }}
-      uses: actions/upload-artifact@v1
-      with:
-        name: oauth-token-retriever
-        path: pkg
+      run: ./bin/compile
     - name: upload release files
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PKG_PLATFORM: ${{ steps.pkg-platform.outputs.name }}
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         files: pkg/*
